tests/baselines/reference/parserModule1.errors.txt
tests/cases/conformance/parser/ecmascript5/ModuleDeclarations/parserModule1.ts(1,19): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/conformance/parser/ecmascript5/ModuleDeclarations/parserModule1.ts (1 errors) ====
        export module CompilerDiagnostics {
                      ~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
            export var debug = false;
            export interface IDiagnosticWriter {
                Alert(output: string): void;
            }
    
            export var diagnosticWriter: IDiagnosticWriter = null;
    
            export var analysisPass: number = 0;
    
            export function Alert(output: string) {
                if (diagnosticWriter) {
                    diagnosticWriter.Alert(output);
                }
            }
    
            export function debugPrint(s: string) {
                if (debug) {
                    Alert(s);
                }
            }
    
            export function assert(condition: boolean, s: string) {
                if (debug) {
                    if (!condition) {
                        Alert(s);
                    }
                }
            }
    
        }